# near-kit-tool-box-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  STANDARDS.md  WORKFLOW.md  book.toml
docs/: README.md  SUMMARY.md  actions.md  tools.md
docs/SC/: README.md  berryclub.ek.near.md  exchequer.pumpopoly.near.md  ft.md  hello.sleet.near.md  hos.venear.dao.md  hos.vote.dao.md  linear-protocol.near.md  lockup.md  meme-cooking.near.md  meta-pool.near.md  near.md  nft.pumpopoly.near.md  pool-staking.md  pool-stakingv1.md  pool.near.md  poolv1.near.md  social.near.md  v2.ref-finance.near.md  world.pumpopoly.near.md  wrap.near.md
src/: lib.rs  main.rs
src/fun/: greeting_get_fun.rs  greeting_set_fun.rs  greeting_set_fun_json.rs  mod.rs
src/fun/ft/: ft_balance_of_fun_json.rs  ft_metadata_fun_json.rs  ft_storage_deposit_fun_json.rs  ft_total_supply_fun_json.rs  ft_transfer_call_fun_json.rs  ft_transfer_fun_json.rs
src/fun/greeting/: greeting_get_fun.rs  greeting_get_fun_json.rs  greeting_set_fun.rs  greeting_set_fun_json.rs
src/fun/near/: add_key_fun_json.rs  delete_account_fun_json.rs  delete_key_fun_json.rs  near_create_account_fun_json.rs  near_create_account_fun_typed.rs  wrap_near_deposit_fun_json.rs  wrap_near_withdraw_fun_json.rs
src/lib/: client.rs  client_kit.rs  contract_greeting.rs
src/lib/const_id/: berryclub_contract_id_const.rs  contract_id_const_type.rs  hello_sleet_contract_id_const.rs  hos_venear_contract_id_const.rs  hos_voting_contract_id_const.rs  linear_protocol_contract_id_const.rs  meme_cooking_contract_id_const.rs  meta_pool_contract_id_const.rs  mod.rs  near_contract_id_const.rs  pool_factory_contract_id_const.rs  pool_factoryv1_contract_id_const.rs  pumpopoly_exchequer_contract_id_const.rs  pumpopoly_nft_contract_id_const.rs  pumpopoly_world_contract_id_const.rs  rhea_contract_id_const.rs  social_near_contract_id_const.rs  wrap_near_contract_id_const.rs
src/lib/contract/: contract_greeting.rs  contract_near.rs  (+1 more)
(+25 files in other folders)
