[package]
name = "sleetplayground-rs"
version = "0.1.0"
edition = "2024"

# =================================================
# =================================================

[lib]
path = "src/lib.rs"

[[bin]]
name = "sleetplayground"
path = "src/main.rs"

# =================================================
# =================================================


[dependencies]
near-kit = "0.4.0"

# =================================================
# =================================================
# copyright 2025 by sleet.near
# 