[package]
name = "near-kit-tool-box"
version = "0.1.0"
edition = "2024"

# =================================================
# =================================================

[lib]
path = "src/lib.rs"

[[bin]]
name = "sleetkit"
path = "src/main.rs"

# =================================================
# =================================================


[dependencies]
near-kit = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"

# =================================================
# =================================================
# copyright 2025 by sleet.near
# 